Resim yollarindaki hatalar duzeltildi

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gamzeaydin.github.io/portfolio",
+  "homepage": "https://gamzeaydinnn.github.io/portfolio",
   "name": "portfolyooo",
   "private": true,
   "version": "0.0.0",
